# HomeAutomation

./: .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  README.md
include/devices/appliances/: Appliance.hpp
include/devices/appliances/hot-tub/server/: HotTub.hpp
include/devices/appliances/hot-tub/subdevices/: Blower.hpp  Heater.hpp  Pump.hpp
include/ha_node/: HANode.hpp  types.h
include/server/bedroom/: Bedroom.hpp
include/server/garage/: Garage.hpp
include/server/kitchen/: Kitchen.hpp
include/server/livingroom/: LivingRoom.hpp
include/types/: device_types.h  network_types.h
include/utils/DeviceManager/: DeviceManager.hpp  IPDeviceManager.hpp  SerialDeviceManager.hpp
res/etc/homeautomation/ha_node/: default.properties
res/sandbox/: README.md
src/devices/appliances/hot-tub/client/: client.cpp
src/devices/appliances/hot-tub/server/: HotTub.cpp  HotTub.hpp  main.cpp
src/devices/appliances/hot-tub/subdevices/: Blower.cpp  Blower.hpp  Heater.cpp  Pump.cpp
src/ha_node/: HANode.cpp  types.h
src/sandbox/: README.md
src/server/bedroom/: Bedroom.cpp  main.cpp
src/server/garage/: Garage.cpp  main.cpp
src/server/kitchen/: Kitchen.cpp  main.cpp
src/server/livingroom/: LivingRoom.cpp  main.cpp
src/types/: NetAddr.h  device_types.h  network_types.h
src/utils/DeviceManager/: DeviceManager.cpp  DeviceManager.hpp  IPDeviceManager.cpp  IPDeviceManager.hpp  SerialDeviceManager.cpp  SerialDeviceManager.hpp  main.cpp
web/: package-lock.json  package.json
web/client/: .babelrc  entry.js  webpack.config.js
web/client/src/: AppEntry.js  Store.js  index.html
web/client/src/components/App/: App.css  App.js
web/client/src/components/Column/: Column.css  Column.js
web/client/src/components/Header/: Header.css  Header.js
web/client/src/components/MultiColumn/: MultiColumn.css  MultiColumn.js  index.js
web/client/src/components/MultiRow/: MultiRow.css  MultiRow.js  index.js
web/client/src/components/Row/: Row.js
web/client/src/components/Sidebar/: Sidebar.css  Sidebar.js
web/client/src/components/common/button/AlterButton/: AlterButton.js  index.js
web/client/src/components/common/button/Button/: Button.css  Button.js
web/client/src/components/common/button/CautionButton/: CautionButton.js  index.js
web/client/src/components/common/button/PrimaryButton/: PrimaryButton.js
web/client/src/components/common/button/SecondaryButton/: SecondaryButton.js
web/client/src/components/common/list/ListItem/: ListItem.js
web/client/src/components/common/list/UnorderedList/: UnorderedList.css  UnorderedList.js  index.js
web/client/src/components/common/text/Input/: Input.css  Input.js
web/client/src/components/common/text/InputWithLabel/: InputWithLabel.css  InputWithLabel.js
web/client/src/components/common/text/TextArea/: TextArea.css  TextArea.js
web/client/src/components/common/text/TextAreaWithLabel/: TextAreaWithLabel.css  TextAreaWithLabel.js  index.js
web/client/src/components/page/Dashboard/: Dashboard.js
web/client/src/components/page/Devices/: Devices.js
web/client/src/components/page/NetworkManagement/: NetworkManagement.css  NetworkManagement.js  index.js
web/client/src/components/page/Nodes/: Nodes.js  index.js
web/client/src/components/page/Page/: Page.css  Page.js
web/server/src/: server.js
